Wed May 24 07:50:51 BST 2006  Olly Betts <olly@survex.com>

	* common/Makefile.am,common/omlinebuf.h,common/socketcommon.h,
	  net/Makefile.am,net/omlinebuf.cc,net/socketcommon.cc:
	  Merge OmLineBuf into OmSocketLineBuf.
	* common/Makefile.am: Fix netutils.cc to be conditionally included
	  when the remote backend is enabled, not the quartz backend!

Tue May 23 18:59:09 BST 2006  Olly Betts <olly@survex.com>

	* api/Makefile.am,api/errorhandler.cc,api/omerror.cc,
	  include/xapian/error.h,include/xapian/errorhandler.h:
	  Redo the Xapian::Error and Xapian::ErrorHandler classes.
	  The new versions have better, clearer documentation comments
	  and are cleaner internally.
	* include/xapian/error.h: Add hook to allow SWIG bindings to
	  be built using GCC's visibility support.

Tue May 23 10:08:02 BST 2006  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Remove superfluous '#include <autoptr.h>'.

Tue May 23 09:42:52 BST 2006  Olly Betts <olly@survex.com>

	* backends/Makefile.am,backends/database.cc,
	  backends/dbfactory_remote.cc,backends/net/net_database.cc,
	  backends/net/net_termlist.cc,backends/net/net_termlist.h,common/,
	  include/xapian/dbfactory.h,matcher/,net/socketclient.cc,
	  net/socketcommon.cc: Eliminate the NetClient class by merging
	  it into NetDatabase.

Mon May 22 08:51:16 BST 2006  Olly Betts <olly@survex.com>

	* common/omtime.h: Fix OmTime::operator> which failed to return false
	  if the seconds were strictly less but the microsecond fraction was
	  more.

Sun May 21 11:53:29 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,bin/Makefile.am,docs/Makefile.am,examples/Makefile.am:
	  Make use of the dist_ prefix to avoid having to list files in
	  EXTRA_DIST as well as in *_DATA and man_MANS.

Sun May 21 05:55:00 BST 2006  Olly Betts <olly@survex.com>

	* api/dir_contents,getopt/dir_contents,queryparser/dir_contents:
	  Add missing dir_contents files.

Sun May 21 05:45:44 BST 2006  Olly Betts <olly@survex.com>
