@@ -1,3 +1,7 @@
+Wed May 24 08:27:22 BST 2006  Olly Betts <olly@survex.com>
+
+	* common/socketserver.h: OmLineBuf -> OmSocketLineBuf.
+
 Wed May 24 07:50:51 BST 2006  Olly Betts <olly@survex.com>
 
 	* common/Makefile.am,common/omlinebuf.h,common/socketcommon.h,
